--- a/Styles/style.css
+++ b/Styles/style.css
@@ -3,6 +3,7 @@
 body {
     margin: 0;
     font-family: 'roboto-mono';
+    text-align: center;
 }
 
 .header {
@@ -255,6 +256,81 @@ img{
     box-shadow: 0px 5px 10px #423b33;
     transform: translate(-50%, -45%);
 }
+
+.container{
+    margin-top: 30px;
+    display:grid;
+    grid-template-columns: repeat(6,1fr);
+    grid-auto-rows:100px 300px;
+    grid-gap:10px;
+    grid-auto-flow: dense;
+}
+
+.gallery-item{
+    width:100%;
+    height:100%;
+    position:relative;
+}
+.gallery-item .image{
+    width:100%;
+    height:100%;
+    overflow:hidden;
+}
+.gallery-item .image img{
+    width:100%;
+    height:100%;
+    object-fit: cover;
+    object-position:50% 50%;
+    cursor:pointer;
+}
+.gallery-container:first-child{
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 3;
+}
+.gallery-container:nth-child(3){
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 2;
+    grid-row-end: 3;
+}
+.gallery-container:nth-child(4){
+    grid-column-start: 5;
+    grid-column-end: 6;
+    grid-row-start: 1;
+    grid-row-end: 3;
+}
+
+.gallery-container:nth-child(5){
+    grid-column-start: 4;
+    grid-column-end: 6;
+    grid-row-start: 2;
+    grid-row-end: 3;
+}
+
+.gallery-container:nth-child(8){
+    grid-column-start: 2;
+    grid-column-end: 4;
+    grid-row-start: 3;
+    grid-row-end: 5;
+}
+.gallery-container:nth-child(12){
+    grid-column-start: 4;
+    grid-column-end: 6;
+    grid-row-start: 4;
+    grid-row-end: 5;
+}
+
+
+@media screen and (max-width:500px){
+    .container{
+        grid-template-columns: repeat(1,1fr);
+    }
+ }
+
+
+
 
 .footerContainer{
     max-width: 100%
