--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,7 @@
 @import url(./base.scss);
 @import url(components.sccs);
 @import url(layout.scss);
-
+@import url(abstracts.scss);
 .slider {
 	width: 100%;
 	height: 500px;
